Adding groups and split the demo server up into groups

--- a/remove_apache.yml
+++ b/remove_apache.yml
@@ -4,10 +4,11 @@
   become: true
   tasks:
   
-  - name: remove apache and php packages
-    package:
+  - name: remove apache and php packages for Ubuntu
+    apt:
       name: 
-        - "{{ apache_package }}"
-        - "{{ php_package }}"
+        - apache2
+        - libapache2-mod-php
       state: absent
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
