--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,11 +4,12 @@
   become: true
   tasks:
   
-  - name: install apache and php packages
-    package:
+  - name: install apache and php packages for Ubuntu
+    apt:
       name: 
-        - "{{ apache_package }}"
-        - "{{ php_package }}"
+        - apache2
+        - libapache2-mod-php
       state: latest
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
     
