--- a/site.yml
+++ b/site.yml
@@ -5,6 +5,7 @@
   pre_tasks:
   
   - name: install updates (Ubuntu)
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
@@ -15,6 +16,7 @@
   tasks:
   
   - name: install apache and php packages (Ubuntu)
+    tags: apache,apache2,ubuntu
     apt:
       name: 
         - apache2
@@ -27,6 +29,7 @@
   tasks:
   
   - name: install mariadb package (Ubuntu)
+    tags: db,mariadb,ubuntu
     apt:
       name: 
         - mariadb-server
@@ -38,6 +41,7 @@
   tasks:
   
   - name: install samba package (Ubuntu)
+    tags: samba
     apt:
       name: 
         - samba
