added host vars and handlers

--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -1,28 +1,28 @@
-- name: install apache and php packages (Ubuntu)
-  tags: apache,apache2,ubuntu
-  apt:
+- name: install apache and php packages
+  tags: apache,php
+  package:
     name: 
-      - apache2
-      - libapache2-mod-php
+      - "{{ apache_package_name }}"
+      - "{{ php_package_name }}"
     state: latest
-  when: ansible_distribution == "Ubuntu"
+  
+- name: start and enable apache service
+  tags: apache,httpd
+  service:
+    name: "{{ apache_service }}"
+    status: started
+    enabled: yes
+  when: ansible_distribution == "CentOS"
     
 - name: change e-mail addres for admin
   tags: apache,centos,httpd
   lineinfile:
     path: /etc/httpd/conf/httpd.conf
     regexp: '^ServerAdmin'
-    line: ServerAdmin somebody@somewhere.net
+    line: ServerAdmin somebody@somewhere.org
   when: ansible_distribution == "CentOS"
-  register: httpd
+  notify: restart_apache
     
-- name: restart https (CentOS)
-  tags: apache,centos,httpd
-  service:
-    name: httpd
-    state: restarted
-  when: httpd.changed
-
 - name: copy default html file for site
   tags: apache,apache2
   copy:
@@ -32,10 +32,3 @@
     group: root
     mode: 0644
   
-- name: start httpd (CentOS)
-  tags: apache,centos,httpd
-  service:
-    name: httpd
-    status: started
-    enabled: yes
-  when: ansible_distribution == "CentOS"
