--- a/host_vars/45.33.84.89.yml
+++ b/host_vars/45.33.84.89.yml
@@ -1,5 +1,3 @@
 apache_package_name: apache2
-apache_service: apache2
-php_package_name: libapache2-mod-php
-ssh_users: "root simone"
+ssh_users: "atomko ansible"
 ssh_template_file: sshd_config_ubuntu.j2
