--- a/chia.yml
+++ b/chia.yml
@@ -16,12 +16,7 @@
   roles:
     - base
         
-- hosts: workstations
+- hosts: chia_server
   become: true
   roles:
-    - workstations
-    
-- hosts: web_servers
-  become: true
-  roles:
-    - web_servers
+    - chia_server
