--- a/host_vars/45.33.84.89.yml
+++ b/host_vars/45.33.84.89.yml
@@ -1,3 +1,3 @@
 apache_package_name: apache2
-ssh_users: "atomko ansible"
+ssh_users: "root atomko ansible"
 ssh_template_file: sshd_config_ubuntu.j2
